# tealeaves-site

./: .gitignore  .gitignore_nix  LICENSE  README.md  default.nix  flake.nix  shell.nix  tealeaves-site-gen.cabal  tealeaves-site-gen.nix  tealeaves-site-generator.cabal  tealeaves-site-generator.nix  tealeaves-site-hakyll.cabal  tealeaves-site-hakyll.nix  tealeaves-site.nix  tealeaves-update-coqdocs.nix  tealeaves-update-examples.nix
app/: Main.hs
extra/: deploy.sh
lib/: Site.hs
site/: 404.html  50x.html  index.html
site/coqdocs/: Tealeaves.Axioms.html  Tealeaves.Backends.LN.AssocList.html  Tealeaves.Backends.LN.Atom.html  Tealeaves.Backends.LN.AtomSet.html  Tealeaves.Backends.LN.LN.html  Tealeaves.Backends.LN.Multisorted.LN.html  Tealeaves.Backends.LN.html  Tealeaves.Categories.TypeFamilies.html  Tealeaves.Categories.Types.html  Tealeaves.Classes.Applicative.html  Tealeaves.Classes.BeckDistributiveLaw.html  Tealeaves.Classes.Bimonad.html  Tealeaves.Classes.Category.html  Tealeaves.Classes.Comonad.html  Tealeaves.Classes.Comonoid.html  Tealeaves.Classes.DT.Functor.html  Tealeaves.Classes.DT.Monad.html  Tealeaves.Classes.Decorated.Functor.html  Tealeaves.Classes.Decorated.Listable.html  Tealeaves.Classes.Decorated.Monad.html  Tealeaves.Classes.Decorated.Setlike.html  Tealeaves.Classes.EqDec_eq.html  Tealeaves.Classes.Equivalences.DT.Functor.html  Tealeaves.Classes.Equivalences.DT.Monad.html  Tealeaves.Classes.Equivalences.Decorated.Functor.html  Tealeaves.Classes.Equivalences.Decorated.Monad.html  Tealeaves.Classes.Equivalences.Monad.html  (+56 more)
site/css/: theme.sass
(+8 files in other folders)
