cabal-version: 1.12

name:           tealeaves-site-generator
version:        0.1.0.0
synopsis:       Website for the Tealeaves project
description:    Please see the README on GitHub at <https://github.com/dunnl/tealeaves-site#readme>
category:       Web
homepage:       https://github.com/dunnl/tealeaves-site/
bug-reports:    https://github.com/dunnl/tealeaves-site/issues
author:         Lawrence Dunn
maintainer:     lawrence@comono.id
copyright:      2022 Lawrence Dunn
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/dunnl/tealeaves-site

library
  exposed-modules:
      Site
  hs-source-dirs:
      lib
  build-depends:
      base >=4.15 && <5
    , data-default == 0.7.*
    , directory == 1.3.*
    , filepath == 1.4.*
    , hakyll == 4.15.*
    , hakyll-sass == 0.2.*
    , pandoc == 2.17.*
    , pandoc-types
  default-language: Haskell2010

executable tealeaves-site-generator
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , tealeaves-site-generator
  default-language: Haskell2010
